# VibeVoiceWindowsApiServer

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEVPLAN.md  README.md  build.bat  config.json  package.bat  run.bat  run_5tests_curl.ps1  start_server.ps1  test_en.json  test_ja.json  test_ko.json  test_mixed.json  test_tts_multilang.ps1  test_zh.json
scripts/: build_engines.py  convert_voices.py  export_onnx.py  export_streaming_onnx.py  prepare_tokenizer.py  requirements.txt
src/: main.cpp
src/audio/: audio_convert.cpp  audio_convert.h  audio_io.cpp  audio_io.h  audio_libs_impl.cpp
src/inference/: dpm_solver.cpp  dpm_solver.h  gpu_ops.cu  gpu_ops.h  kv_cache.cpp  kv_cache.h  model_config.cpp  model_config.h  stt_pipeline.cpp  stt_pipeline.h  trt_engine.cpp  trt_engine.h  tts_pipeline.cpp  tts_pipeline.h
src/server/: http_server.cpp  http_server.h
src/tests/: test_common.h  tests_e2e.cpp  tests_unit.cpp
src/tokenizer/: bpe_tokenizer.cpp  bpe_tokenizer.h  special_tokens.h  unicode_utils.cpp  unicode_utils.h
src/utils/: cuda_buffer.cpp  cuda_buffer.h  cuda_check.h  logger.cpp  logger.h
